Updated Java Project and Added Kotlin